fix spacing between bar and text

--- a/assets/styles/experience.css
+++ b/assets/styles/experience.css
@@ -126,6 +126,10 @@ h3, p{
     align-items: center;
 }
 
+#langs-container h3{
+    margin: 5px;
+}
+
 /* fix redundant buttons, combine button2 and info button */
 
 #langs-group{
